--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Học HTML</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem, ipsum.</p>
+    <p>123</p>
 </body>
 </html>
